--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@
 }
 
 h2 {
-  margin: 1em;
+  margin: 0.5em;
 }
 
 .quote-selector {
@@ -17,6 +17,10 @@ h2 {
   border-radius: 20px;
   padding: 1em;
   margin: 1em;
+}
+
+.error {
+  color: red;
 }
 
 .form-radio {
