create generateReport page

--- a/index.css
+++ b/index.css
@@ -61,6 +61,43 @@
      cursor: pointer;
 }
 
+.form-check {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  display: inline-block;
+  position: relative;
+  background-color: #f1f1f1;
+  color: #666;
+  top: 10px;
+  height: 30px;
+  width: 30px;
+  border: 0;
+  cursor: pointer;     
+  margin-right: 7px;
+  outline: none;
+}
+.form-check:checked::before {
+  position: absolute;
+  font: 13px/1 'Open Sans', sans-serif;
+  left: 11px;
+  top: 7px;
+  content: '\02143';
+  transform: rotate(40deg);
+}
+.form-check:hover {
+  background-color: #f7f7f7;
+}
+.form-check:checked {
+  background-color: #f1f1f1;
+}
+
+.form-check-label {
+  font-size: 2em;
+  color: #666;
+  cursor: pointer;
+}
+
 button {
   width: 300px;
 }
